# examank05

./: CMakeLists.txt
cpp_module00/: Warlock.cpp  Warlock.hpp  main.cpp
cpp_module01/: ATarget.cpp  Dummy.cpp  Dummy.hpp  Fwoosh.hpp  Warlock.hpp  main.cpp
cpp_module02/: ASpell.cpp  ASpell.hpp  ATarget.hpp  Fwoosh.cpp  Warlock.cpp
